@@ -59,6 +59,7 @@ cmake $(VISTA_TESTING_SOURCE_DIR)   \
 -DTEST_VISTA_SETUP:BOOL=ON \
 -DTEST_VISTA_FRESH:BOOL=ON \
 -DTEST_VISTA_FRESH_ALL:BOOL=ON \
+-DVISTA_PRECOMPILE_ALL_ROUTINES:BOOL=ON \
 -DTEST_VISTA_GTM_ROUTINE_DIR:STRING=$(VISTA_ROUTINES_DIR) \
 -DTEST_VISTA_FRESH_M_DIR:PATH=$(VISTA_M_WORKING_TREE) \
 -DTEST_VISTA_FRESH_GTM_ROUTINE_DIR:PATH=$(VISTA_ROUTINES_DIR) \
